--- a/requirements.txt
+++ b/requirements.txt
@@ -1,78 +1,1 @@
-alabaster==0.7.12
-asn1crypto==0.24.0
-astroid==2.1.0
-astropy==3.1
-atomicwrites==1.2.1
-attrs==18.2.0
-Babel==2.6.0
-backcall==0.1.0
-backports.os==0.1.1
-backports.shutil-get-terminal-size==1.0.0
-beautifulsoup4==4.6.3
-bitarray==0.8.3
-bkcharts==0.2
-bleach==3.0.2
-bokeh==1.0.2
-boto==2.49.0
-Bottleneck==1.2.1
-certifi==2018.11.29
-cffi==1.11.5
-chardet==3.0.4
-Click==7.0
-cloudpickle==0.6.1
-colorama==0.4.1
-comtypes==1.1.7
-contextlib2==0.5.5
-cryptography==2.4.2
-cycler==0.10.0
-Cython==0.29.2
-cytoolz==0.9.0.1
-dask==1.0.0
-distributed==1.25.1
-dj-database-url==0.5.0
-fastcache==1.0.2
-gunicorn==19.9.0
-html5lib==1.0.1
-importlib-metadata==0.6
-ipykernel==5.1.0
-ipython==7.2.0
-ipython-genutils==0.2.0
-ipywidgets==7.4.2
-jsonschema==2.6.0
-networkx==2.2
-packaging==18.0
-path.py==11.5.0
-pathlib2==2.3.3
-pkginfo==1.4.2
-py==1.7.0
-pycodestyle==2.4.0
-pycosat==0.6.3
-pycparser==2.19
-pycrypto==2.6.1
-pycurl==7.43.0.2
-pyflakes==2.0.0
-Pygments==2.3.1
-pylint==2.2.2
-pyodbc==4.0.25
-pyOpenSSL==18.0.0
-pyparsing==2.3.0
-PySocks==1.6.8
-pytest==4.0.2
-pytest-arraydiff==0.3
-pytest-astropy==0.5.0
-pytest-doctestplus==0.2.0
-pytest-openfiles==0.3.1
-pytest-remotedata==0.3.1
-python-dateutil==2.7.5
-pytz==2018.7
-PyWavelets==1.0.1
-pywinpty==0.5.5
-PyYAML==3.13
-whitenoise==4.1.2
-win-inet-pton==1.0.1
-win-unicode-console==0.5
-wincertstore==0.2
-XlsxWriter==1.1.2
-xlwings==0.15.1
-xlwt==1.3.0
-zict==0.1.3
+Django~=2.0.6
